hphp/hack/test/typecheck/immutable_binding/immutable_catch_mutation.php.exp
File "immutable_catch_mutation.php", line 7, characters 5-5:
Invalid lvalue (Parsing[1002])
