hphp/hack/test/typecheck/immutable_binding/immutable_catch_mutation.php
<?hh // experimental

function foo(): void {
  try {
    throw new Exception();
  } catch (Exception e) {
    e = new Exception();
    throw e;
  }
}
